<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="message"
            type="com.sobhan.ebcomtask.model.Message" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/motionMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardView"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            android:visibility="gone"
            android:button="@drawable/custom_check_box"
            app:layout_constraintStart_toEndOf="@id/cardView"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            android:elevation="@dimen/_8sdp"
            app:changeBackground="@{message.unread}"
            app:layout_constraintEnd_toStartOf="@id/checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_4sdp">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutDescription="@xml/message_without_image_xml_scene">

                <ImageView
                    android:id="@+id/ivBookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:contentDescription="@string/bookmark"
                    app:changeBookmark="@{message.bookmarked}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:contentDescription="@string/share"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="@id/ivBookmark"
                    app:layout_constraintStart_toEndOf="@id/ivBookmark"
                    app:layout_constraintTop_toTopOf="@id/ivBookmark" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/normal"
                    android:text="@string/_1400_10_24_10_50"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="@id/ivShare"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ivShare" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/bold"
                    android:text="@{message.title}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDate" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/normal"
                    android:singleLine="true"
                    android:text="@{message.description}"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ivShare"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ivShare"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription" />

                <TextView
                    android:id="@+id/tvMessageExpireTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/normal"
                    android:text="@string/message_expire_time"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view" />

                <ImageView
                    android:id="@+id/ivExpandable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:contentDescription="@string/expandable"
                    android:src="@drawable/ic_expand"
                    app:layout_constraintBottom_toBottomOf="@id/tvMessageExpireTimeTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view"
                    app:layout_constraintTop_toTopOf="@id/tvMessageExpireTimeTitle" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/normal"
                    android:text="@string/_1400_11_20_15_30"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="@id/ivExpandable"
                    app:layout_constraintStart_toEndOf="@id/ivExpandable"
                    app:layout_constraintTop_toTopOf="@id/ivExpandable" />

            </androidx.constraintlayout.motion.widget.MotionLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>